[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathlib_abc"
version = "0.1.0"
authors = [
  { name="Barney Gale", email="barney.gale@gmail.com" },
]
description = "Backport of pathlib ABCs"
readme = "README.rst"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Python Software Foundation License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers"
]

[project.urls]
Homepage = "https://github.com/barneygale/pathlib_abc"
Issues = "https://github.com/barneygale/pathlib_abc/issues"

[tool.hatch.build.targets.sdist]
exclude = [
  ".gitmodules",
  "/cpython",
]
