[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathlib_abc"
version = "0.4.1"
authors = [
  { name="Barney Gale", email="barney.gale@gmail.com" },
]
description = "Backport of pathlib ABCs"
readme = "README.rst"
license = {file = "LICENSE.txt"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Python Software Foundation License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers"
]

[project.urls]
Homepage = "https://github.com/barneygale/pathlib-abc"
Issues = "https://github.com/barneygale/pathlib-abc/issues"
